force-app/main/default/objects/Feedback_c__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Session__c</fullName>
        <label>Training_Session</label>
        <referenceTo>Training_Session_c__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Feedback__c</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback__c Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>